--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/vendor.css" />
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/vendor.css" /> -->
 
     <script defer src="js/vendor/fontawesome/all.min.js"></script>
 
